--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "lil-gui": "^0.17.0",
         "mini-css-extract-plugin": "^2.6.0",
         "portfinder-sync": "0.0.2",
+        "qr-scanner": "^1.4.2",
         "raw-loader": "^4.0.2",
         "style-loader": "^3.3.1",
         "three": "^0.140.0",
